# ha-econnect-alarm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  hacs.json  pyproject.toml  requirements_all.txt  requirements_test_all.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: building.yaml  hassfest.yaml  linting.yaml  publish.yaml  testing.yaml
custom_components/econnect_alarm/: __init__.py  alarm_control_panel.py  binary_sensor.py  config_flow.py  const.py  decorators.py  devices.py  exceptions.py  helpers.py  manifest.json  services.yaml  strings.json
custom_components/econnect_alarm/translations/: en.json  it.json
custom_components/econnect_metronet/: __init__.py  alarm_control_panel.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  decorators.py  devices.py  exceptions.py  helpers.py  icons.json  manifest.json  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/econnect_metronet/translations/: en.json  it.json
custom_components/elmo_iess_alarm/: __init__.py  alarm_control_panel.py  binary_sensor.py  config_flow.py  const.py  devices.py  exceptions.py  helpers.py  manifest.json  strings.json
custom_components/elmo_iess_alarm/translations/: en.json  it.json
homeassistant/components/econnect_alarm/: __init__.py  alarm_control_panel.py  binary_sensor.py  config_flow.py  const.py  decorators.py  exceptions.py  helpers.py  manifest.json  strings.json
homeassistant/components/econnect_alarm/translations/: en.json
scripts/: download_fixtures.sh  init
tests/: conftest.py  helpers.py  test_alarm_panel.py  test_binary_sensors.py  test_config_flow.py  test_coordinator.py  test_decorators.py  test_devices.py  test_experimental_settings.py  test_experiments.py  test_helpers.py  test_migrations.py  test_options_flow.py  test_sensors.py  test_services.py  test_switch.py
tests/components/econnect_alarm/: test_config_flow.py
tests/econnect_alarm/: __init__.py
tests/fixtures/: responses.py
